--- a/src/style.css
+++ b/src/style.css
@@ -92,6 +92,34 @@ p {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
 }
 
+.content-container {
+  padding: 80px 20px;
+}
+
+.content-container h2 {
+  font-size: 24px;
+  font-family: var(--default-font-family);
+}
+
+.content {
+  margin: 20px;
+}
+
+.content p {
+  padding-right: 30px;
+  font-family: var(--default-font-family);
+  font-size: 16px;
+  line-height: 30px;
+}
+
+.content h3 {
+  font-size: 24px;
+  font-weight: 700;
+  opacity: 1;
+  line-height: 1.5;
+  font-family: var(--default-font-family);
+}
+
 @media (max-width: 992px) {
   h1 {
     font-size: 37px;
@@ -105,7 +133,7 @@ p {
   }
 
   p {
-    font-size: 16px;
+    font-size: 17px;
     opacity: 0.8;
   }
 
@@ -120,6 +148,19 @@ p {
   .personal-img {
     display: block;
     margin: 40px auto 0px;
+  }
+
+  .about-section {
+    text-align: center;
+    padding: 0;
+  }
+
+  .about-section-content p {
+    padding-right: 0;
+  }
+
+  .content {
+    text-align: center;
   }
 }
 
