--- a/src/style.css
+++ b/src/style.css
@@ -34,9 +34,25 @@ h3 {
   line-height: 1.5;
 }
 
+h4 {
+  font-size: 48px;
+  font-weight: bold;
+}
+
 p {
-  font-size: 20px;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 30px;
   opacity: 0.8;
+}
+
+.navbar-nav .nav-link:hover,
+.navbar-nav .nav-link.active {
+  color: var(--link-color);
+}
+
+footer {
+  margin: 60px 0;
 }
 
 .hero {
@@ -46,6 +62,7 @@ p {
 
 .hero p {
   font-size: 32px;
+  font-weight: 700;
 }
 
 .hero-info {
@@ -120,6 +137,38 @@ p {
   font-family: var(--default-font-family);
 }
 
+.contact-box {
+  background-color: var(--primary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+
+.email-link {
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+}
+
+.email-link:hover {
+  color: var(--link-color);
+}
+
+.social-links a {
+  margin: 0 20px;
+  padding: 10px 15px;
+  color: var(--link-color);
+  background-color: var(--primary-color);
+  border-radius: 50%;
+  font-size: 18px;
+  transition: all 100ms ease-in-out;
+  text-decoration: none;
+}
+
+.social-links a:hover {
+  color: #ffffff;
+  background-color: var(--link-color);
+}
+
 @media (max-width: 992px) {
   h1 {
     font-size: 37px;
@@ -128,7 +177,8 @@ p {
     font-size: 28px;
   }
 
-  h3 {
+  h3,
+  h4 {
     font-size: 24px;
   }
 
@@ -159,23 +209,17 @@ p {
     padding-right: 0;
   }
 
+  .about-section-img {
+    display: block;
+    margin: 0 auto;
+  }
+
   .content {
     text-align: center;
   }
 }
 
 @media (max-width: 767px) {
-  h1 {
-    font-size: 34px;
-  }
-  h2 {
-    font-size: 30px;
-  }
-
-  p {
-    font-size: 16px;
-  }
-
   .navbar-brand {
     font-size: 1em;
   }
@@ -202,5 +246,9 @@ p {
 
   .projects-section {
     text-align: center;
+  }
+
+  .email-link {
+    font-size: 18px;
   }
 }
